# daylily-ursa

./: .dockerignore  AGENTS.md  Dockerfile  README.md  cluex.yaml  environment.yaml  pyproject.toml  ursa-conformance-directive.md
config/: daylily-workset-monitor.yaml  ecosystem-versions.json  tapdb-config-ursa.yaml  ursa-config.example.yaml  workset-monitor-config.template.yaml  workset-monitor-config.yaml
container_tests/: test_container_runtime.py
daylib_ursa/: __init__.py  analysis_commands.py  analysis_jobs.py  analysis_samples_manifest.py  analysis_store.py  anomalies.py  atlas_result_client.py  aws_usage.py  bloom_resolver_client.py  cluster_job_worker.py  cluster_jobs.py  cluster_service.py  config.py  container_entry.py  domain_access.py  file_metadata.py  gui_app.py  gui_cache.py  manifest_editor_options.py  observability.py  resource_store.py  run_analysis_jobs.py  run_directory_orchestrator.py  run_directory_worker.py  s3_utils.py  stage_samples.py  staging_jobs.py  tapdb_dag.py  tapdb_mount.py  tapdb_provenance.py  tapdb_templates.py  ursa_config.py  workset_api.py  workset_api_cli.py
docker/: entrypoint.sh
docs/: GOOGLE_OAUTH_DEFAULT.md  MULTI_REGION.md  README.md  cluster_auto_cleanup.md  compute_cluster_lifecycle.md  dewey_run_analysis_triggers.md  tapdb_mount_execplan.md
tests/: conftest.py  test_activation_metadata.py  test_admin_gui_and_cluster_routes.py  test_analysis_ingest.py  test_analysis_jobs.py  test_analysis_store_relationships.py  test_auth_dependencies.py  test_aws_usage_reports.py  test_bloom_resolver_client.py  test_cli_db_tapdb.py  test_cli_registry_v2.py  test_cli_server_helpers.py  test_cluster_headnode_diagnostics.py  test_cluster_job_worker.py  test_cluster_partition_helpers.py  test_cluster_region_configuration.py  test_console_scripts.py  test_container_entry_runtime.py  test_container_runtime.py  test_dayec_run_directory_command_catalog.py  test_daylily_ec_runner.py  test_deployment_chrome.py  test_dewey_client.py  test_dewey_run_analysis_triggers.py  test_dewey_workset_api.py  test_domain_access.py  test_file_metadata.py  test_resource_store_canonical_jobs.py  test_result_return.py  test_stage_samples_additional_helpers.py  test_stage_samples_helpers.py  test_staging_jobs.py  test_tapdb_backend.py  test_tapdb_dag.py  test_tapdb_mount.py  test_tapdb_registry_fixtures.py  test_user_tokens_api.py  test_v1_api_contracts.py  test_worksets_api.py  (+1 more)
(+45 files in other folders)
